# cskaoyan

./: .gitignore  CMakeLists.txt  README.md
C-base/: CMakeLists.txt
C-base/01_hello_world/: test.c
C-base/02_1_symbolic_constants/: CMakeLists.txt  symbolic_constants.c
C-base/02_2_float/: CMakeLists.txt  float.c
C-base/02_3_char/: CMakeLists.txt  char.c
C-base/02_4_cast/: CMakeLists.txt  cast.c
C-base/02_5_printf/: CMakeLists.txt  printf.c
C-base/02_6_decimal_conversion/: CMakeLists.txt  decimal_conversion.c
C-base/02_7_scanf/: CMakeLists.txt  scanf.c
C-base/03_1_arithmetic/: CMakeLists.txt  arithmetic.c
C-base/03_2_relation/: CMakeLists.txt  relation.c
C-base/03_3_logic/: CMakeLists.txt  logic.c
C-base/03_4_short_circuit/: CMakeLists.txt  short_circuit.c
C-base/03_5_assign/: CMakeLists.txt  assign.c
C-base/03_6_sizeof/: CMakeLists.txt  sizeof.c
C-base/04_1_if/: CMakeLists.txt  if.c
C-base/04_2_while/: CMakeLists.txt  while.c
C-base/04_3_for/: CMakeLists.txt  for.c
C-base/04_4_continue/: CMakeLists.txt  continue.c
C-base/04_5_break/: CMakeLists.txt  break.c
C-base/04_6_work/: 04work.c  CMakeLists.txt
C-base/05_1_array/: CMakeLists.txt  array.c
C-base/05_2_access_out_of_bounds/: CMakeLists.txt  access_out_of_bounds.c
C-base/05_3_array_transmit/: CMakeLists.txt  array_transmit.c
C-base/05_4_char_array/: CMakeLists.txt  char_array.c
C-base/05_5_scanf_string/: CMakeLists.txt  scanf_string.c
C-base/05_6_gets_puts/: CMakeLists.txt  gets_puts.c
C-base/05_7_str/: CMakeLists.txt  str.c
C-base/06_1_pointer/: CMakeLists.txt  (+1 more)
(+28 files in other folders)
