add_subdirectory(01_hello_world)
add_subdirectory(02_1_symbolic_constants)
add_subdirectory(02_2_float)
add_subdirectory(02_3_char)
add_subdirectory(02_4_cast)
add_subdirectory(02_5_printf)
add_subdirectory(02_6_decimal_conversion)
add_subdirectory(02_7_scanf)
add_subdirectory(03_1_arithmetic)
add_subdirectory(03_2_relation)
add_subdirectory(03_3_logic)
add_subdirectory(03_4_short_circuit)
add_subdirectory(03_5_assign)
add_subdirectory(03_6_sizeof)
add_subdirectory(04_1_if)
add_subdirectory(04_2_while)
add_subdirectory(04_3_for)
add_subdirectory(04_4_continue)
add_subdirectory(04_5_break)
add_subdirectory(04_6_work)
add_subdirectory(05_1_array)
add_subdirectory(05_2_access_out_of_bounds)
add_subdirectory(05_3_array_transmit)
add_subdirectory(05_4_char_array)
add_subdirectory(05_5_scanf_string)
add_subdirectory(05_6_gets_puts)
add_subdirectory(05_7_str)
add_subdirectory(06_1_pointer)
add_subdirectory(06_2_change_pointer)
add_subdirectory(06_3_pointer_cal)
add_subdirectory(06_4_pointer_array)
add_subdirectory(06_5_pointer_malloc)
add_subdirectory(06_6_heap_stack)
add_subdirectory(07_1_function)
add_subdirectory(07_2_recursion)